--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.0",
+    "dotenv": "^16.0.0",
+    "firebase": "^9.6.7",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
@@ -15,6 +18,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
